--- a/force-app/main/default/classes/StringUtilsTest.cls
+++ b/force-app/main/default/classes/StringUtilsTest.cls
@@ -89,6 +89,7 @@ private class StringUtilsTest {
         }
     }
     
+    // next target is `global static String abbreviate(final String str, final String abbrevMarker, Integer offset, final Integer maxWidth) {`
 
 
 
